Log all endpoint accesses to DB

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -17,6 +17,7 @@ SPDX-License-Identifier: AGPL-3.0-only
 		  <a href="{{url_for('user.index_view')}}" class="btn btn-success btn-block">{{gettext('Users')}}</a>
 		  <a href="{{url_for('suggestions.index_view')}}" class="btn btn-success btn-block">{{gettext('Suggestions')}}</a>
 		  <a href="{{url_for('personalization.index_view')}}" class="btn btn-success btn-block">{{gettext('Personalization')}}</a>
+      <a href="{{url_for('accesslogs.index_view')}}" class="btn btn-success btn-block">{{gettext('Access logs')}}</a>
       </div>
     </div>
     </div>
