--- a/app/templates/pages/tos.html
+++ b/app/templates/pages/tos.html
@@ -24,7 +24,7 @@
        <br>
 
        <h4>Funding</h4>
-       <p>There are no ads on this Site. PeARS relies on <a href="https://opencollective.com/possible-worlds-research/projects/decentralized-web-search">donations</a> and public funding for its development.</p
+       <p>There are no ads on this Site. PeARS relies on <a href="https://opencollective.com/possible-worlds-research/projects/decentralized-web-search">donations</a> and public funding for its development.</p>
        <br>
 
        <h4>Your commitments</h4>
@@ -37,6 +37,14 @@
        <p>You confirm that your have the copyright holder's permission for any content you post, under applicable law.</p>
 
        <h6>You cannot post content that discriminates against others, including on grounds of ethnicity, nationality, gender, sexual orientation, disability status or religion.</h6>
+       <br>
+       <h4>Content review</h4>
+       <p>We do not review any content. Nonetheless we reserve the right to conduct random checks, particularly in response to reports of infringements. We also do not use automatic review systems, filters or similar tools that automatically scan, edit, block or remove comments or take any other action.</p>
+       <br>
+
+       <h4>Violations of your commitments</h4>
+       <p>We will, at our discretion, either edit or delete any content that violates legal provisions, rights or these terms of service. We may also delete the your account and/or issue a ban and permanently block you in the event of serious violations or repeated minor violations. We will inform all persons affected by any such action of the reasons.</p>
+       <p>We will always act carefully, objectively and proportionately when reviewing content and taking action and will take into account the rights and legitimate interests of all parties involved.</p>
        <br>
 
        <h4>The rights you give to us</h4>
