--- a/app/templates/base/_formhelpers.html
+++ b/app/templates/base/_formhelpers.html
@@ -28,9 +28,8 @@
 
 {% macro render_captcha_field(field, captcha_id) %}
 <div class="form-group">
-        <p>{{ field.label }}</p>
-        {% set explain_image = gettext("To verify that you are a human being, we ask you to write down the sequence of numbers that you see in the image below. If the sequence is too hard, click \'Refresh\' to get a new one, or click \'Switch to audio captcha\' to get a new sequence as an audio file.") %}
-        {% set explain_audio = gettext("To verify that you are a human being, we ask you to write down the sequence of numbers that you hear in the audio file below. If the audio player doesn't load, you can also download the file. If the sequence is too hard, click \'Refresh\' to get a new one, or click \'Switch to image captcha\' to get a new sequence as an image.") %}
+        {% set explain_image = gettext("To verify that you are a human being, we ask you to write down the sequence of numbers that you see in the image below. If the sequence is too hard, click the refresh button to get a new one, or click on the ear icon to get a new sequence as an audio file.") %}
+        {% set explain_audio = gettext("To verify that you are a human being, we ask you to write down the sequence of numbers that you hear in the audio file below. If the audio player doesn't load, you can also download the file. If the sequence is too hard, click the refresh button to get a new one, or click on the eye icon to get a new sequence as an image.") %}
         <p class="alert alert-info"><small id="captcha-alert">{{explain_image}}</small></p>
         <div>
           <script>
@@ -40,15 +39,15 @@
             function toggleContentType() {
               if (contentType === "image") {
                 contentType = "audio";
-                buttonText = '{{gettext("Switch to image captcha")}}';
+                buttonText = '<ion-icon name="eye-outline" size="large"></ion-icon>';
                 alertText = "{{explain_audio}}";
               } 
               else {
                 contentType = "image";
-                buttonText = '{{gettext("Switch to audio captcha")}}';
+                buttonText = '<ion-icon name="ear-outline" size="large"></ion-icon>';
                 alertText = "{{explain_image}}";
               }
-              $("#captcha-switch").text(buttonText);
+              $("#captcha-switch").html(buttonText);
               $("#captcha-alert").text(alertText);
               refreshCaptcha();
             }
@@ -75,12 +74,10 @@
               }
             }
           </script>
-          <div id="captcha-display" class="mb-3">
-            <img src="/auth/show_captcha/{{captcha_id}}">
-          </div>
           <div class="mb-3">
-          <a class="btn btn-success" id="captcha-switch" onclick="toggleContentType();">{{gettext("Switch to audio captcha")}}</a>
-            <a class="btn btn-success" onclick="refreshCaptcha();">Refresh</a>
+		  <span id="captcha-display"><img src="/auth/show_captcha/{{captcha_id}}"></span>
+	    <a class="btn btn-lg btn-light" onclick="refreshCaptcha();" title="refresh"><ion-icon name="refresh-circle-outline" size="large"></ion-icon></a>
+            <a class="btn btn-lg btn-light" id="captcha-switch" onclick="toggleContentType();" title="toggle image/audio captcha"><ion-icon name="ear-outline" size="large"></ion-icon></a>
           </div>
         </div>
         {{ field(class_="form-control input-s", size=32, placeholder=gettext("Enter the numbers you saw/heard here.")) }}
