Updated cross instance code to select best instances prior to search.

--- a/app/templates/search/results.html
+++ b/app/templates/search/results.html
@@ -54,7 +54,7 @@ SPDX-License-Identifier: AGPL-3.0-only
           <div class="card mt-2">
             <div class="card-body" style="padding: 20px 0px 20px 0px">
               <div class="d-flex justify-content-between"><!-- card header: links -->
-	        <div><ion-icon name="globe"></ion-icon> <a href="{{result['url']}}" style="text-decoration: none; font-size: large"><b>{{result['title']}}</b></a></div>
+	        <div><ion-icon name="globe"></ion-icon> <a href="{{result['url']}}" style="text-decoration: none; font-size: large"><b>{{result['title']}}</b></a> <span class="badge rounded-pill text-bg-warning">{{result['instance']}}</span></div>
 	        <div>
 	          <a class="btn btn-link" href="{{url_for('orchard.annotate')}}?url={{result['url']}}" data-toggle="tooltip" title="{{gettext('Add a note to this entry')}}"><ion-icon name="chatbubble-outline"></ion-icon></a>  
 	          <a class="btn btn-link" href="{{url_for('orchard.report')}}?url={{result['url']}}"  data-toggle="tooltip" title="{{gettext('Report this entry')}}"><ion-icon name="flag-outline"></ion-icon></a> 
