Disable commenting & reporting for remote URLs

--- a/app/templates/search/results.html
+++ b/app/templates/search/results.html
@@ -62,8 +62,10 @@ SPDX-License-Identifier: AGPL-3.0-only
           {% endif %}
           </div>
 	        <div>
+            {% if result['instance_is_local']%}
 	          <a class="btn btn-link" href="{{url_for('orchard.annotate')}}?url={{result['url']}}" data-toggle="tooltip" title="{{gettext('Add a note to this entry')}}"><ion-icon name="chatbubble-outline"></ion-icon></a>  
-	          <a class="btn btn-link" href="{{url_for('orchard.report')}}?url={{result['url']}}"  data-toggle="tooltip" title="{{gettext('Report this entry')}}"><ion-icon name="flag-outline"></ion-icon></a> 
+	          <a class="btn btn-link" href="{{url_for('orchard.report')}}?url={{result['url']}}"  data-toggle="tooltip" title="{{gettext('Report this entry')}}"><ion-icon name="flag-outline"></ion-icon></a>
+            {% endif %} 
 	          <button class="btn btn-link" data-toggle="tooltip" title="{{gettext('Share this entry')}}" onClick="copyToClipboard('{{result['share']}}', 'copy{{result['id']}}')" id="copy{{result['id']}}"><ion-icon name="share-outline"></ion-icon></button> 
                 </div>
 	      </div><!-- card heard: links -->
