--- a/app/templates/search/results.html
+++ b/app/templates/search/results.html
@@ -54,7 +54,7 @@ SPDX-License-Identifier: AGPL-3.0-only
           <div class="card mt-2">
             <div class="card-body" style="padding: 20px 0px 20px 0px">
               <div class="d-flex justify-content-between"><!-- card header: links -->
-	        <div><ion-icon name="globe"></ion-icon> <a href="{{result['url']}}" style="text-decoration: none; font-size: large"><b>{{result['title']}}</b></a> 
+	        <div><ion-icon name="globe"></ion-icon> <a href="{{result['display_url']}}" style="text-decoration: none; font-size: large"><b>{{result['title']}}</b></a> 
           {% if result['instance_is_local']%}
           <span class="badge rounded-pill text-bg-info" title="{{result['instance_info_text']}}">{{result['instance']}}</span>
           {% else %}
@@ -70,7 +70,7 @@ SPDX-License-Identifier: AGPL-3.0-only
                 </div>
 	      </div><!-- card heard: links -->
 
-	      <p class="card-text small"><a href="{{result['url']}}" class="card-link">{{result['url']}}</a></p><!-- explicit link-->
+	      <p class="card-text small"><a href="{{result['display_url']}}" class="card-link">{{result['url']}}</a></p><!-- explicit link-->
 	      <p class="card-text small" style="margin-top:-10px">
               <br>{{result['snippet']|safe}}<!--snippet-->
               {% if result['notes'] != None %}
