Change in template to inform people about here flag.

--- a/app/templates/search/index.html
+++ b/app/templates/search/index.html
@@ -33,6 +33,7 @@ SPDX-License-Identifier: AGPL-3.0-only
           </button>
         </div>
       </form>
+      <p class="small text-start">This search box will query the whole PeARS network. To limit your search to this instance, simply add <i>!here</i> to your query.</p>
 	{% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
